--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,7 @@ body{
 #map{
   width:100%;
   height:100%;
+  position: relative; 
 }
 @media (max-width: 1200px) {
   #sidebar {
@@ -567,9 +568,10 @@ select:focus{
 }
 .map-legend {
   position: absolute;
-  right: 42px;
+  right: 16px;
   bottom: 16px;
   z-index: 1000;  
+  min-width: 160px;
   background: #fff;
   border: 1px solid #e2e6f0;
   border-radius: 10px;
